# swagger_server/controllers/default_controller.py
@@ -53,18 +53,3 @@ def get_student_by_id(student_id, subject=None):  # noqa: E501
     if res:
         return res
     return 'Not Found', 404
-
-def get_student_by_lastname(last_name):  # noqa: E501
-    """Find student by ID
-
-    Returns a single student # noqa: E501
-
-    :param last_name: last name of student to return
-    :type last name: str
-
-    :rtype: Student
-    """
-    res = student_service.get_student_by_lastname(last_name)
-    if res:
-        return res
-    return 'Not Found', 404
