# swagger_server/models/student.py
@@ -15,7 +15,7 @@ class Student(Model):
     Do not edit the class manually.
     """
 
-    def __init__(self, student_id: int=None, first_name: str=None, last_name: str=None, grades: object=None):  # noqa: E501
+    def __init__(self, student_id: int=None, first_name: str=None, last_name: str=None, grades: Dict[str, int]=None):  # noqa: E501
         """Student - a model defined in Swagger
 
         :param student_id: The student_id of this Student.  # noqa: E501
@@ -25,13 +25,13 @@ class Student(Model):
         :param last_name: The last_name of this Student.  # noqa: E501
         :type last_name: str
         :param grades: The grades of this Student.  # noqa: E501
-        :type grades: object
+        :type grades: Dict[str, int]
         """
         self.swagger_types = {
             'student_id': int,
             'first_name': str,
             'last_name': str,
-            'grades': object
+            'grades': Dict[str, int]
         }
 
         self.attribute_map = {
@@ -121,22 +121,22 @@ class Student(Model):
         self._last_name = last_name
 
     @property
-    def grades(self) -> object:
+    def grades(self) -> Dict[str, int]:
         """Gets the grades of this Student.
 
 
         :return: The grades of this Student.
-        :rtype: object
+        :rtype: Dict[str, int]
         """
         return self._grades
 
     @grades.setter
-    def grades(self, grades: object):
+    def grades(self, grades: Dict[str, int]):
         """Sets the grades of this Student.
 
 
         :param grades: The grades of this Student.
-        :type grades: object
+        :type grades: Dict[str, int]
         """
 
         self._grades = grades
