# swagger_server/swagger/swagger.yaml
@@ -37,30 +37,6 @@ paths:
         "409":
           description: "already exists"
       x-swagger-router-controller: "swagger_server.controllers.default_controller"
-  /student/:
-    get:
-      summary: "Find student by Last Name"
-      description: "Returns a single student"
-      operationId: "get_student_by_lastname"
-      produces:
-      - "application/xml"
-      - "application/json"
-      parameters:
-      - name: "last_name"
-        in: "query"
-        description: "Last name of student to return"
-        required: true
-        type: "string"
-      responses:
-        "200":
-          description: "successful operation"
-          schema:
-            $ref: "#/definitions/Student"
-        "400":
-          description: "Invalid Lastname supplied"
-        "404":
-          description: "student not found"
-      x-swagger-router-controller: "swagger_server.controllers.default_controller"
   /student/{student_id}:
     get:
       summary: "Find student by ID"
@@ -70,17 +46,17 @@ paths:
       - "application/xml"
       - "application/json"
       parameters:
+      - name: "subject"
+        in: "query"
+        description: "The subject name"
+        required: false
+        type: "string"
       - name: "student_id"
         in: "path"
         description: "ID of student to return"
         required: true
         type: "integer"
         format: "int64"
-      - name: "subject"
-        in: "query"
-        description: "The subject name"
-        required: false
-        type: "string"
       responses:
         "200":
           description: "successful operation"
@@ -120,15 +96,18 @@ definitions:
     properties:
       student_id:
         type: "integer"
-        format: "int64"
       first_name:
         type: "string"
       last_name:
         type: "string"
       grades:
-        type: "object"
+        type: "array"
+        items:
+          type: "integer"
     example:
       student_id: 0
       last_name: "last_name"
-      grades: "{}"
+      grades:
+      - 6
+      - 6
       first_name: "first_name"
